# DirectXStart3D

./: CMakeLists.txt  CMakePresets.json  DirectXStart3D.sln  DirectXStart3D.vcxproj  README.md
assets/model/: anim_0.anim  anim_1.anim  anim_2.anim  anim_3.anim  anim_4.anim  anim_5.anim  anim_6.anim  anim_7.anim  material_0.material.json  mesh_0.mesh  mesh_1.mesh  scene.json  skeleton.json  sword_offset.json
shaders/: player.hlsl  present.hlsl  shader.hlsl  staticMesh.hlsl
src/:  GraphicsApp.h  BufferUtils.cpp  BufferUtils.h  Camera.cpp  Camera.h  CommonTypes.h  GraphicsApp.cpp  GraphicsApp.h  GraphicsUtils.cpp  GraphicsUtils.h  Ground.cpp  Ground.h  InputController.cpp  InputController.h  Pch.h  Player.cpp  Player.h  Sword.cpp  Sword.h  TextureLoader.cpp  TextureLoader.h  Timer.cpp  Timer.h  main.cpp
